// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Img Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-eFegNN gAaKNc"
  >
    <img
      class="sc-bXTejn foFpYE"
      src=""
    />
  </div>
</div>
`;

exports[`Storyshots Core/Img With Fallback 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-eFegNN gAaKNc"
  >
    <img
      class="sc-bXTejn foFpYE"
      src="imgthatfails"
    />
  </div>
</div>
`;
